--- a/index.html
+++ b/index.html
@@ -1,19 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jiwa Group</title>
-    <link rel="shortcut icon" href="Logos\Icon.png">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_right_alt" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=stat_minus_1" />
-    <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Lexend:wght@100..900&family=Tilt+Warp&display=swap" rel="stylesheet">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JIWA GROUP</title>
+    <link rel="shortcut icon" href="Logos\Icon.png" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_right_alt"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=stat_minus_1"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Lexend:wght@100..900&family=Tilt+Warp&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index-style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+
+
+  <body>
+    <header class="text-green-900 font-medium flex justify-center px-12 items-center" style="font-family: Gabarito, sans-serif;">
+      <div class="container flex flex-row items-center justify-between w-full py-4 font-bold ">
+        <div class="px-8">
+          <ul class="list-none flex flex-row gap-5 ">
+            <li class="dropdown">
+              Brand
+              <div class="dropdown-content">
+                <a href="#">Jiwa Group</a>
+              </div>
+            </li>
+            <li class="dropdown">
+              Partnership
+              <div class="dropdown-content">
+                <a href="#">Brand Licensing</a>
+                <a href="#">Location Partnership</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <img src="Logos\jiwa-logo.png" alt="janji-jiwa-logo" class="w-20" />
+        </div>
+        <div>
+          <ul class="flex flex-row gap-10">
+            <li>Jiwa+</li>
+            <li class="dropdown">
+              Corporate
+              <div class="dropdown-content">
+                <a href="#">About Us</a>
+                <a href="#">Career</a>
+                <a href="#">Contact</a>
+                <a href="#">ESG</a>
+              </div>
+            </li>
+            <li class="dropdown">
+              Account
+              <div class="dropdown-content">
+                <p>Login to</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="flex flex-row justify-center align-center py-5 px-10 gap-2">
+        <img
+          src="index pictures\languange flag\lang-id.png"
+          alt="indonesian-flag"
+          class="w-5 h-5"
+        />
+        <p class="font-medium text-xs">|</p>
+        <img
+          src="index pictures\languange flag\lang-en.png"
+          alt="english-flag"
+          class="w-5 h-5"
+        />
+      </div>
+    </header>
+  </body>
 </html>
