--- a/index.html
+++ b/index.html
@@ -34,20 +34,24 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-
   <body>
-    <header class="text-green-900 font-medium flex justify-center px-12 items-center" style="font-family: Gabarito, sans-serif;">
-      <div class="container flex flex-row items-center justify-between w-full py-4 font-bold ">
+    <header
+      class="text-green-900 flex justify-center px-12 items-center"
+      style="font-family: Gabarito, sans-serif"
+    >
+      <div
+        class="container flex flex-row items-center lg:justify-between sm:justify-around py-4 font-bold"
+      >
         <div class="px-8">
-          <ul class="list-none flex flex-row gap-5 ">
+          <ul class="list-none flex flex-row gap-20 text-lg">
             <li class="dropdown">
-              Brand
+              BRAND
               <div class="dropdown-content">
                 <a href="#">Jiwa Group</a>
               </div>
             </li>
             <li class="dropdown">
-              Partnership
+              PARTNERSHIP
               <div class="dropdown-content">
                 <a href="#">Brand Licensing</a>
                 <a href="#">Location Partnership</a>
@@ -56,13 +60,13 @@
           </ul>
         </div>
         <div>
-          <img src="Logos\jiwa-logo.png" alt="janji-jiwa-logo" class="w-20" />
+          <img src="Logos\jiwa-logo.png" alt="janji-jiwa-logo" class="w-24" />
         </div>
         <div>
-          <ul class="flex flex-row gap-10">
-            <li>Jiwa+</li>
+          <ul class="flex flex-row gap-10 text-lg">
+            <li>JIWA+</li>
             <li class="dropdown">
-              Corporate
+              CORPORATE
               <div class="dropdown-content">
                 <a href="#">About Us</a>
                 <a href="#">Career</a>
@@ -71,7 +75,7 @@
               </div>
             </li>
             <li class="dropdown">
-              Account
+              ACCOUNT
               <div class="dropdown-content">
                 <p>Login to</p>
               </div>
@@ -93,5 +97,48 @@
         />
       </div>
     </header>
+    <div>
+      <img
+        src="bg-hero middle.jpg"
+        alt="midde-picture-background"
+        class="bg-cover absolute"
+      />
+    </div>
+    <div class="py-20 sm:bg-cover md:bg-auto">
+      <swiper-container
+        class="mySwiper"
+        navigation="true"
+        space-between="30"
+        loop="true"
+        watch-slides-progress="true"
+        slides-per-view="1.5"
+        centered-slides="true"
+        space-between="50"
+        grab-cursor="true"
+      >
+        <swiper-slide
+          ><img
+            src="index pictures\Banner Ads\banner1.jpg"
+            alt="carousel-promo-picture-1"
+        /></swiper-slide>
+        <swiper-slide
+          ><img
+            src="index pictures\Banner Ads\banner2.jpg"
+            alt="carousel-promo-picture-2"
+        /></swiper-slide>
+        <swiper-slide
+          ><img
+            src="index pictures\Banner Ads\banner3.jpg"
+            alt="carousel-promo-picture-3"
+        /></swiper-slide>
+        <swiper-slide
+          ><img
+            src="index pictures\Banner Ads\banner4.jpg"
+            alt="carousel-promo-picture-4"
+        /></swiper-slide>
+      </swiper-container>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   </body>
 </html>
