--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
 
   <body>
     <header
-      class="text-green-900 flex justify-center px-12 items-center"
+      class="text-green-900 flex lg:flex-row justify-center px-4 lg:px-12 items-center"
       style="font-family: Gabarito, sans-serif"
     >
+      <!-- Main Navigation -->
       <div
-        class="container flex flex-row items-center lg:justify-between sm:justify-around py-4 font-bold"
+        class="container flex sm:items-left lg:flex-row lg:items-center lg:justify-between py-4 font-bold"
       >
-        <div class="px-8">
+        <!-- Navigation Menu -->
+        <div class="hidden lg:block px-8">
           <ul class="list-none flex flex-row gap-20 text-lg">
             <li class="dropdown">
               BRAND
@@ -59,10 +61,18 @@
             </li>
           </ul>
         </div>
-        <div>
-          <img src="Logos\jiwa-logo.png" alt="janji-jiwa-logo" class="w-24" />
+
+        <!-- Logo -->
+        <div class="flex justify-center lg:justify-start">
+          <img
+            src="Logos/jiwa-logo.png"
+            alt="janji-jiwa-logo"
+            class="w-16 lg:w-24"
+          />
         </div>
-        <div>
+
+        <!-- Right Menu -->
+        <div class="hidden lg:block">
           <ul class="flex flex-row gap-10 text-lg">
             <li>JIWA+</li>
             <li class="dropdown">
@@ -83,20 +93,23 @@
           </ul>
         </div>
       </div>
-      <div class="flex flex-row justify-center align-center py-5 px-10 gap-2">
+
+      <!-- Language Selection -->
+      <div class="flex flex-row justify-center items-center py-5 px-10 gap-2">
         <img
-          src="index pictures\languange flag\lang-id.png"
+          src="index pictures/languange flag/lang-id.png"
           alt="indonesian-flag"
           class="w-5 h-5"
         />
         <p class="font-medium text-xs">|</p>
         <img
-          src="index pictures\languange flag\lang-en.png"
+          src="index pictures/languange flag/lang-en.png"
           alt="english-flag"
           class="w-5 h-5"
         />
       </div>
     </header>
+
     <div>
       <img
         src="bg-hero middle.jpg"
@@ -104,7 +117,7 @@
         class="bg-cover absolute"
       />
     </div>
-    <div class="py-20 sm:bg-cover md:bg-auto">
+    <div class="md:py-20 sm:py-1 sm:bg-cover md:bg-auto hidden lg:block">
       <swiper-container
         class="mySwiper"
         navigation="true"
@@ -112,6 +125,39 @@
         loop="true"
         watch-slides-progress="true"
         slides-per-view="1.5"
+        centered-slides="true"
+        space-between="50"
+        grab-cursor="true"
+      >
+        <swiper-slide
+          ><img
+            src="index pictures\Banner Ads\banner1.jpg"
+            alt="carousel-promo-picture-1"
+        /></swiper-slide>
+        <swiper-slide
+          ><img
+            src="index pictures\Banner Ads\banner2.jpg"
+            alt="carousel-promo-picture-2"
+        /></swiper-slide>
+        <swiper-slide
+          ><img
+            src="index pictures\Banner Ads\banner3.jpg"
+            alt="carousel-promo-picture-3"
+        /></swiper-slide>
+        <swiper-slide
+          ><img
+            src="index pictures\Banner Ads\banner4.jpg"
+            alt="carousel-promo-picture-4"
+        /></swiper-slide>
+      </swiper-container>
+    </div>
+    <div class="py-8 px-8 sm:bg-cover md:bg-cover block lg:hidden">
+      <swiper-container
+        class="mySwiper"
+        space-between="30"
+        loop="true"
+        watch-slides-progress="true"
+        slides-per-view="1"
         centered-slides="true"
         space-between="50"
         grab-cursor="true"
