--- a/contact_us/contact_us.html
+++ b/contact_us/contact_us.html
@@ -10,15 +10,15 @@
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <form
       id="registrationForm"
-      class="bg-white p-8 rounded shadow-lg max-w-md w-full"
+      class="bg-white p-6 sm:p-8 rounded shadow-lg w-full max-w-sm sm:max-w-md"
     >
-      <h1 class="text-2xl font-bold text-center mb-6">Student Registration</h1>
+      <h1 class="text-xl sm:text-2xl font-bold text-center mb-4 sm:mb-6">
+        Student Registration
+      </h1>
 
       <!-- Full Name -->
       <div class="mb-4">
-        <label for="fullName" class="block text-sm font-medium text-gray-700"
-          >Full Name</label
-        >
+        <label for="fullName" class="block text-sm font-medium text-gray-700">Full Name</label>
         <input
           type="text"
           id="fullName"
@@ -30,9 +30,7 @@
 
       <!-- Student ID -->
       <div class="mb-4">
-        <label for="studentId" class="block text-sm font-medium text-gray-700"
-          >Student ID (NIM)</label
-        >
+        <label for="studentId" class="block text-sm font-medium text-gray-700">Student ID (NIM)</label>
         <input
           type="text"
           id="studentId"
@@ -44,9 +42,7 @@
 
       <!-- Email Address -->
       <div class="mb-4">
-        <label for="email" class="block text-sm font-medium text-gray-700"
-          >Email Address</label
-        >
+        <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
         <input
           type="email"
           id="email"
@@ -58,9 +54,7 @@
 
       <!-- Faculty/Major -->
       <div class="mb-4">
-        <label for="faculty" class="block text-sm font-medium text-gray-700"
-          >Faculty/Major</label
-        >
+        <label for="faculty" class="block text-sm font-medium text-gray-700">Faculty/Major</label>
         <select
           id="faculty"
           name="faculty"
@@ -78,9 +72,7 @@
 
       <!-- Date of Birth -->
       <div class="mb-4">
-        <label for="dob" class="block text-sm font-medium text-gray-700"
-          >Date of Birth</label
-        >
+        <label for="dob" class="block text-sm font-medium text-gray-700">Date of Birth</label>
         <input
           type="date"
           id="dob"
@@ -116,22 +108,18 @@
 
       <!-- Address -->
       <div class="mb-4">
-        <label for="address" class="block text-sm font-medium text-gray-700"
-          >Address</label
-        >
+        <label for="address" class="block text-sm font-medium text-gray-700">Address</label>
         <textarea
           id="address"
           name="address"
-          class="focus:ring-2 focus:ring-blue-500 w-full mt-1 p-2 border border-gray-300 rounded"
+          class="focus:ring-2 focus:ring-blue-500 w-full mt-1 p-2 border border-gray- 300 rounded"
           placeholder="Enter your address"
         ></textarea>
       </div>
 
       <!-- Phone Number -->
       <div class="mb-4">
-        <label for="phoneNumber" class="block text-sm font-medium text-gray-700"
-          >Phone Number</label
-        >
+        <label for="phoneNumber" class="block text-sm font-medium text-gray-700">Phone Number</label>
         <input
           type="text"
           id="phoneNumber"
@@ -142,17 +130,17 @@
       </div>
 
       <!-- Buttons -->
-      <div class="flex items-center justify-between mt-6">
+      <div class="flex flex-col sm:flex-row items-center justify-between mt-6 space-y-4 sm:space-y-0">
         <button
           type="button"
           id="clearButton"
-          class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600"
+          class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 w-full sm:w-auto"
         >
           Clear
         </button>
         <button
           type="submit"
-          class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
+          class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full sm:w-auto"
         >
           Submit
         </button>
@@ -161,4 +149,4 @@
 
     <script src="contact.js"></script>
   </body>
-</html>
+</html> 
