--- a/Index/index.html
+++ b/Index/index.html
@@ -224,6 +224,34 @@
     </div>
 
 
+
+
+
+
+    <footer class="container">
+      <div>
+        <img src="Logos\jiwa-logo.png" alt="janji-jiwa-logo">
+        <hr class="border-2 border-lime-500 w-14" />
+        <p>PT Luna Boga Narayan</p>
+        <h3>Hubungi Kami</h3>
+        <p><i class="material-icons">mail_outline</i>info@jiwagroup.com</p>
+        <p><i class="material-icons">place</i>Jl. Kedoya Raya No.2 Kota<br>
+        Jakarta Barat, Daerah Khusus<br>
+        Ibukota Jakarta 11520
+        </p>
+        
+      </div>
+      <div>
+
+      </div>
+      <div>
+
+      </div>
+      <div>
+
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="scriptindex.js"></script>
 
